# CompositeFermions

./: .gitignore  MANUAL.tex  Manifest.toml  Project.toml  README.md  bench_symmetric_poly.jl  derivation_jktype.tex  index.html
.github/workflows/: CI.yml  Documentation.yml
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  density.csv  density_unprojected.csv  pair_correlation.csv
cpp/examples/: sampler_single_state.cpp  sampler_unprojected.cpp
cpp/examples/consumer/: CMakeLists.txt  README.md  main.cpp
cpp/include/cfsonsphere/: cfsonsphere.hpp  determinant.hpp  half_integer.hpp  io.hpp  j_y_eigenstates.hpp  jk_projection.hpp  lambda_levels.hpp  legendre.hpp  monopole_harmonics.hpp  monte_carlo.hpp  projected_wavefunction.hpp  slater_inverse.hpp  spinor.hpp  symmetric_polynomials.hpp  unprojected_wavefunction.hpp
cpp/reference/: cfg_p1_10_2.csv  cfg_p1_16_4.csv  cfg_p1_20_2.csv  cfg_p1_32_4.csv  cfg_p1_4_1.csv  cfg_p1_9_3.csv  cfg_p2_10_2.csv  cfg_p2_16_4.csv  cfg_p2_9_3.csv  cfg_u_16_4.csv  cfg_u_25_5.csv  cfg_u_9_3.csv  dump_logpsi.jl  dump_reference.jl  esp.csv  esp_mult2.csv  esp_mult3.csv  esp_roots.csv  jastrow_proj1.csv  jastrow_proj2.csv  jastrow_unproj.csv  logpsi_p1_10_2.csv  logpsi_p1_16_4.csv  logpsi_p1_20_2.csv  logpsi_p1_32_4.csv  logpsi_p1_4_1.csv  logpsi_p1_9_3.csv  logpsi_p2_10_2.csv  logpsi_p2_16_4.csv  logpsi_p2_9_3.csv  logpsi_systems.csv  logpsi_u_16_4.csv  logpsi_u_25_5.csv  logpsi_u_9_3.csv  phi_proj2.csv  phi_unproj.csv  projection_coeff.csv  slater_proj1.csv  slater_proj2.csv  slater_unproj.csv  (+3 more)
cpp/test/: test_cfsonsphere.cpp  test_logpsi.cpp  test_reference.cpp
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  thermalization.jl
dev/api/: index.html
dev/architecture/: index.html
dev/physics/: index.html
dev/theory/: index.html
dev/validation/: index.html
docs/: Project.toml  incremental_esp_derivation.md  make.jl
docs/literate/: 01_ground_state.jl  02_excitations.jl  03_higher_fillings.jl  04_unprojected_fast.jl  05_partons.jl  06_observables.jl  07_under_the_hood.jl
docs/src/: api.md  architecture.md  index.md  physics.md  theory.md  validation.md
docs/tutorials/: sampler_single_state.jl
examples/: blurred_sampler_single_state.jl  emcee_sampling.jl  hartree_fock_cf.jl  sampler_hartree_fock.jl  sampler_single_state.jl  sampler_single_state_1.jl  sampler_single_state_parton.jl  sampler_unprojected.jl
examples/data/: data_4_particles_1_3_filling_factor_10_chain_number.jld2  data_4_particles_1_3_filling_factor_11_chain_number.jld2  data_4_particles_1_3_filling_factor_12_chain_number.jld2  data_4_particles_1_3_filling_factor_13_chain_number.jld2  data_4_particles_1_3_filling_factor_14_chain_number.jld2  data_4_particles_1_3_filling_factor_15_chain_number.jld2  data_4_particles_1_3_filling_factor_16_chain_number.jld2  data_4_particles_1_3_filling_factor_1_chain_number.jld2  data_4_particles_1_3_filling_factor_2_chain_number.jld2  data_4_particles_1_3_filling_factor_3_chain_number.jld2  data_4_particles_1_3_filling_factor_4_chain_number.jld2  data_4_particles_1_3_filling_factor_5_chain_number.jld2  data_4_particles_1_3_filling_factor_6_chain_number.jld2  data_4_particles_1_3_filling_factor_7_chain_number.jld2  data_4_particles_1_3_filling_factor_8_chain_number.jld2  data_4_particles_1_3_filling_factor_9_chain_number.jld2
examples/data_1/: data_4_particles_1_3_filling_factor_10_chain_number.jld2  data_4_particles_1_3_filling_factor_11_chain_number.jld2  data_4_particles_1_3_filling_factor_12_chain_number.jld2  data_4_particles_1_3_filling_factor_13_chain_number.jld2  data_4_particles_1_3_filling_factor_14_chain_number.jld2  data_4_particles_1_3_filling_factor_15_chain_number.jld2  data_4_particles_1_3_filling_factor_16_chain_number.jld2  data_4_particles_1_3_filling_factor_1_chain_number.jld2  data_4_particles_1_3_filling_factor_2_chain_number.jld2  data_4_particles_1_3_filling_factor_3_chain_number.jld2  data_4_particles_1_3_filling_factor_4_chain_number.jld2  data_4_particles_1_3_filling_factor_5_chain_number.jld2  data_4_particles_1_3_filling_factor_6_chain_number.jld2  data_4_particles_1_3_filling_factor_7_chain_number.jld2  data_4_particles_1_3_filling_factor_8_chain_number.jld2  data_4_particles_1_3_filling_factor_9_chain_number.jld2
mathematica/: README.md  cluster.wls  frac.wls  fractrue.wls  verify.wls
ref/: cf_ground_state_energies.csv
scripts/: cfd_chain_worker.jl  mc_chain_worker.jl  reduce_chains.jl  slurm_mc_array.slurm  validate_cfd.jl
src/: CFsOnSphere.jl  calculate_j_y_eigenstates.jl  cfd_estimators.jl  dft_wavefunction.jl  harmonic_density.jl  jk_projection_utilities.jl  lambda_levels.jl  legendre_polynomials.jl  monopole_harmonics.jl  monte_carlo.jl  projected_wavefunction.jl  slater_inverse.jl  spinor_coordinates.jl  symmetric_polynomials.jl  unprojected_wavefunction.jl
src/jax_translation/: CFsOnSphere.jl  calculate_j_y_eigenstates.py  jk_projection_utilities.jl  jk_projection_utilities.py  legendre_polynomials.jl  monte_carlo_utilities.jl  projected_wavefunction.jl  symmetric_polynomials.jl  symmetric_polynomials.py  test.py
test/: runtests.jl
(+9 files in other folders)
